--- a/Css/responsive.css
+++ b/Css/responsive.css
@@ -527,9 +527,7 @@
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
- body{
-  background: red;
- }
+
  
   * {
     padding: 0;
@@ -564,7 +562,7 @@
 
   body {
     color: var(--text-color);
-   
+   background: var(--body-color);
     font: 400 1rem 'DM Sans', sans-serif;
   }
 
